--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     // SNMP Library
     implementation 'org.snmp4j:snmp4j:3.8.2'
 
+    // Password Encryption (BCrypt)
+    implementation 'org.springframework.security:spring-security-crypto:6.4.2'
+
     // HTTP Client for Social API
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
@@ -47,10 +50,12 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-flyway-test'
-    testImplementation 'org.springframework.boot:spring-boot-starter-jdbc-test'
+    testAnnotationProcessor 'org.projectlombok:lombok'
+
+    // Spring Boot Test (includes MockMvc, MockBean, etc.)
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    // Spring Boot WebMvc Test (for @WebMvcTest in Spring Boot 4.0+)
     testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
-    testImplementation 'org.springframework.boot:spring-boot-starter-websocket-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
